feat: 회원가입, 프로필 추가 기능 구현

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -116,7 +116,7 @@
 
 :root {
   --radius: 0.625rem;
-  --background: var(--color-primary-900);
+  --background: var(--color-primary);
   --foreground: oklch(0.145 0 0);
   --card: oklch(1 0 0);
   --card-foreground: oklch(0.145 0 0);
