design: 메인  전체 디자인 수정

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -68,7 +68,7 @@
 @layer base {
   body {
     background-color: var(--background);
-    color: var(--color-neutral-1000);
+    color: #ffffff;
     font-family: var(--font-display);
   }
   button {
